tests/build/fail/no-args-attr.rs
use ref_split::*;

#[ref_split]
struct MyStruct {
    x: i32,
}

fn main() {}